# reedos

./: .gdbinit  .gitignore  .rusty-hook.toml  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  flake.nix  kernel.ld  qemu-commands.txt  qemu-wrapper.sh
.cargo/: config.toml
.old/: entry.S  link.x  mod-riscv64-virt-gcc.ld
docs/: external-references.md.html  gdb-guide.md.html  nm-guide.md.html  objcopy-guide.md.html  objdump-guide.md.html  qemu-guide.md.html
docs/presentation/: slides.aux  slides.nav  slides.out  slides.tex  slides.toc
src/: .hw.rs.swp  alloc.rs  asm.rs  collection.rs  device.rs  entry.S  entry.rs  fs.rs  general-alloc.rs  hw.rs  id.rs  lib.rs  lock.rs  log.rs  m_mode.rs  main.rs  mem.rs  param.rs  process.rs  riscv.rs  spinlock.rs  timervec.rs  trap.rs  trapvec.rs  uart.rs  vm.rs
src/alloc/: kalloc.rs
src/asm/: entry.s  macro.s  trampoline.s  trap.s
src/device/: clint.rs  plic.rs  uart.rs  virtio.rs
src/file/: elf64.rs
src/fs/: structs.rs
src/hw/: hartlocal.rs  param.rs  riscv.rs
src/lock/: condition.rs  mutex.rs  rw.rs
src/process/: blocking.rs  initialization.rs  pid.rs  scheduler.rs  syscall.rs
src/programs/spin/: Makefile  spin.ld  spin.s
src/programs/syscall-basic/: Makefile  syscall-basic.s
src/programs/uart-write/: Makefile  uart-write.s
src/trap/: clint.rs  trapvec.rs
src/vm/: galloc.rs  global.rs  kalloc.rs  memlayout.md  palloc.rs  process.rs  ptable.rs  vmalloc.rs
