[package]
name = "reedos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Building from rust-embedded/riscv-rt project.
r0 = "1.0.0"
riscv = "0.10"
riscv-rt-macros = { path = "macros", version = "0.2.0"}

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
