[package]
name = "reedos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[lib]
crate-type = ["staticlib"] #Absolutely critical, haha.
path = "src/main.rs"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
